--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -251,6 +251,12 @@
     }
   },
   "shop-module": {
+    "common": {
+      "company-identifier-number-type": {
+        "0": "VAT ID",
+        "1": "NIP"
+      }
+    },
     "ad-campaign-form-component": {
       "active": "Active",
       "create-ad-campaign": "Create ad campaign",
@@ -307,6 +313,27 @@
     },
     "add-update-product-review-component": {
       "add-review": "Add review"
+    },
+    "add-user-company-details-component": {
+      "company-name": "Company name",
+      "postal-code": "Postal code",
+      "city": "City",
+      "street": "Street",
+      "houseNumber": "House number",
+      "apartament-number": "Apartment number",
+      "save": "Save"
+    },
+    "add-user-delivery-address-component": {
+      "first-name": "First name",
+      "last-name": "Last name",
+      "email": "Email address",
+      "phone-number": "Phone number",
+      "postal-code": "Postal code",
+      "city": "City",
+      "street": "Street",
+      "house-number": "House number",
+      "apartament-number": "Apartment number",
+      "save": "Save"
     },
     "basket-component": {
       "basket": "Basket",
@@ -517,6 +544,10 @@
         "purchase-lists": "Purchase lists"
       },
       "menu": "Menu"
+    },
+    "user-company-details-component": {
+      "add-company-details": "Add company details",
+      "company-details": "Company details"
     },
     "user-delivery-address-component": {
       "add-delivery-address": "Add delivery address",
