--- a/src/assets/i18n/pl.json
+++ b/src/assets/i18n/pl.json
@@ -122,6 +122,12 @@
       "choose-permission-group": "Wybierz grupę uprawnień",
       "save": "Zapisz"
     },
+    "user-basic-info-component": {
+      "account-details": "Dane konta",
+      "email": "E-mail",
+      "first-name": "Imię",
+      "last-name": "Nazwisko"
+    },
     "user-form-component": {
       "create-user": "Stwórz użytkownika",
       "date-of-birth": "Data urodzenia",
@@ -146,6 +152,12 @@
       },
       "create-new-user": "Stwórz nowego użytkownika",
       "users": "Użytkownicy"
+    },
+    "user-password-component": {
+      "change-password": "Zmień hasło",
+      "current-password": "Obecne hasło",
+      "new-password": "Nowe hasło",
+      "repeat-new-password": "Powtórz nowe hasło"
     },
     "user-permission-group-table-component": {
       "add": "Dodaj",
@@ -239,6 +251,12 @@
     }
   },
   "shop-module": {
+    "common": {
+      "company-identifier-number-type": {
+        "0": "VAT ID",
+        "1": "NIP"
+      }
+    },
     "ad-campaign-form-component": {
       "active": "Aktywny",
       "create-ad-campaign": "Stwórz kampanię reklamową",
@@ -295,6 +313,27 @@
     },
     "add-update-product-review-component": {
       "add-review": "Dodaj recenzję"
+    },
+    "add-user-company-details-component": {
+      "company-name": "Nazwa firmy",
+      "postal-code": "Kod pocztowy",
+      "city": "Miasto",
+      "street": "Ulica",
+      "houseNumber": "Numer domu",
+      "apartament-number": "Numer mieszkania",
+      "save": "Zapisz"
+    },
+    "add-user-delivery-address-component": {
+      "first-name": "Imię",
+      "last-name": "Nazwisko",
+      "email": "Adres e-mail",
+      "phone-number": "Numer telefonu",
+      "postal-code": "Kod pocztowy",
+      "city": "Miasto",
+      "street": "Ulica",
+      "house-number": "Numer domu",
+      "apartament-number": "Numer mieszkania",
+      "save": "Zapisz"
     },
     "basket-component": {
       "basket": "Koszyk",
@@ -505,6 +544,20 @@
         "purchase-lists": "Listy zakupów"
       },
       "menu": "Menu"
+    },
+    "user-company-details-component": {
+      "add-company-details": "Dodaj szczegóły firmy",
+      "company-details": "Szczegóły firmy"
+    },
+    "user-delivery-address-component": {
+      "add-delivery-address": "Dodaj adres dostawy",
+      "address-details": "Dane adresowe"
+    },
+    "user-settings-component": {
+      "items": {
+        "account-settings": "Ustawienia konta",
+        "order-data": "Dane do zamówień"
+      }
     }
   },
   "warehouse-module": {},
